--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-my first page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel=stylesheet href=styles/styles.css>
+    <title>首頁</title>
+</head>
+<body>
+    <h1>To Be or Not To Be</h1>
+    <img src="images/skull.png" alt="a skull">
+    <p>how is that a question?</p>
+    <script src="scripts/main.js"></script>
+</body>
+</html>
